--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
       <meta charset="UTF-8">
-    <title>React example</title>
+    <title>Chatroom Practice</title>
     </head>
     <body>
       <div id="app"></div>
