implement the article

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,10 +2,12 @@
     <html lang="en">
     <head>
       <meta charset="UTF-8">
+      <link rel="stylesheet" href="index.css">
     <title>Chatroom Practice</title>
     </head>
     <body>
       <div id="app"></div>
+      <div id="swal2-container"></div>
       <script src="bundle.js"></script>
     </body>
 </html>
